; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_core.c_core_flg_fcn_set.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_core.c_core_flg_fcn_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@R_FLAGS_FS_FUNCTIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32, i32)* @core_flg_fcn_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @core_flg_fcn_set(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @R_FLAGS_FS_FUNCTIONS, align 4
  %12 = call i32 @r_flag_space_push(i32* %10, i32 %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32* @r_flag_set(i32* %13, i8* %14, i32 %15, i32 %16)
  store i32* %17, i32** %9, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @r_flag_space_pop(i32* %18)
  %20 = load i32*, i32** %9, align 8
  ret i32* %20
}

declare dso_local i32 @r_flag_space_push(i32*, i32) #1

declare dso_local i32* @r_flag_set(i32*, i8*, i32, i32) #1

declare dso_local i32 @r_flag_space_pop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
